<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="animation_close_btn">Continuer</string>
    <string name="api_errmaj">Une nouvelle version existe. Merci de mettre à jour l\'application.</string>
    <string name="app_name">Izy Badge</string>
    <string name="consulter_aide">Badge non détecté ? Cliquez ici</string>
    <string name="consulter_site">Accédez à izybadge.fr</string>
    <string name="err_initialisation_app">Initialisation impossible.\nVérifiez votre connexion internet.</string>
    <string name="get_code_erreur_compteur">Votre badge ne peut pas être copié. Contactez-nous : test@test.fr</string>
    <string name="get_code_erreur_inconnue">Enregistrement impossible.\nVérifiez votre connexion internet.</string>
    <string name="get_code_erreur_lecture">Désolé, une erreur est survenue lors de la lecture de ce badge, merci de réessayer ou nous contacter : contact@izybadge.fr</string>
    <string name="initialisation_app">Initialisation en cours...</string>
    <string name="nfc_activer_btn">Activer la NFC</string>
    <string name="nfc_desactive">Le NFC est désactivé. Veuillez l\'activer.</string>
    <string name="nfc_non_installe">Votre téléphone n\'est pas compatible.</string>
    <string name="reader_erreur_lecture">Une erreur est survenue\npendant la lecture</string>
    <string name="reader_erreur_tag_unsupported">Votre téléphone ne semble pas compatible avec ce badge, essayez avec un autre téléphone ou envoyez-nous votre badge.</string>
    <string name="reader_erreur_taglost">Badge non détecté.\n\nPrésentez-le à nouveau\n\nsans bouger</string>
    <string name="reader_lecture_en_cours">Lecture en cours… Patienter</string>
    <string name="reader_lecture_finalisation">Encore un petit instant…</string>
    <string name="reader_presenter_badge">Présentez votre badge\ncontre le lecteur situé\n au dos du téléphone</string>
    <string name="reader_result_btn_commander_badge">Passez commande</string>
    <string name="reader_result_btn_retour_menu">Scannez un autre badge</string>
    <string name="reader_result_last_title">Dernier badge lu</string>
    <string name="reader_result_success_text">Numéro BadgeDuplicator3 : %1$s\nNuméro du badge : %2$s</string>
    <string name="reader_result_success_text_nonum">Code IzyBadge\n\n%s</string>
    <string name="reader_result_success_title">Badge lu avec succès !</string>
    <string name="reader_title">Lecture d\'un badge</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
</resources>