<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:padding="20dp" android:layout_width="match_parent" android:layout_height="match_parent">
    <TextView android:id="@+id/app_version" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="" app:layout_constraintRight_toRightOf="0" app:layout_constraintTop_toTopOf="0" style="@style/AppVersionLabel"/>
    <TextView android:id="@+id/title" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/reader_result_success_title" android:textAlignment="center" app:layout_constraintBottom_toTopOf="@+id/circle_progress" app:layout_constraintTop_toTopOf="0" style="@style/SuccessTitle"/>
    <com.badgeduplicator.badgeduplicator3.CircleProgress android:id="@+id/circle_progress" android:layout_width="match_parent" android:layout_height="0dp" android:layout_marginLeft="40dp" android:layout_marginRight="40dp" app:layout_constraintBottom_toTopOf="@+id/btn_commander_badge" app:layout_constraintTop_toBottomOf="@+id/title" style="@style/SuccessCircleProgress"/>
    <TextView android:gravity="center" android:id="@+id/txt_value" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/reader_result_success_text_nonum" android:textAlignment="center" app:layout_constraintBottom_toTopOf="@+id/btn_commander_badge" app:layout_constraintTop_toBottomOf="@+id/title" style="@style/SuccessMsg"/>
    <Button android:id="@+id/btn_commander_badge" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="20dp" android:text="@string/reader_result_btn_commander_badge" app:layout_constraintBottom_toTopOf="@+id/btn_retour_menu" app:layout_constraintLeft_toLeftOf="0" app:layout_constraintRight_toRightOf="0" app:layout_constraintTop_toBottomOf="@+id/circle_progress" style="@style/ButtonPrimary"/>
    <Button android:id="@+id/btn_retour_menu" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/reader_result_btn_retour_menu" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintLeft_toLeftOf="0" app:layout_constraintRight_toRightOf="0" app:layout_constraintTop_toBottomOf="@+id/btn_commander_badge" style="@style/ButtonSecondary"/>
</android.support.constraint.ConstraintLayout>
