<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:layout_width="match_parent" android:layout_height="match_parent">
    <TextView android:textSize="18sp" android:textColor="@color/colorBleuClair" android:id="@+id/lien_aide" android:padding="20dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/consulter_aide" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintLeft_toLeftOf="0" app:layout_constraintRight_toRightOf="0"/>
    <android.support.constraint.ConstraintLayout android:id="@+id/constraintLayout" android:layout_width="match_parent" android:layout_height="0dp" android:layout_marginLeft="20dp" android:layout_marginTop="20dp" android:layout_marginRight="20dp" app:layout_constraintBottom_toTopOf="@+id/lien_aide" app:layout_constraintLeft_toLeftOf="0" app:layout_constraintRight_toRightOf="0" app:layout_constraintTop_toTopOf="0">
        <TextView android:id="@+id/app_version" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="" app:layout_constraintRight_toRightOf="@+id/logo" app:layout_constraintTop_toBottomOf="@+id/logo" style="@style/AppVersionLabel"/>
        <ImageView android:id="@+id/logo" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:src="@drawable/izybadge" android:contentDescription="@string/app_name" app:layout_constraintTop_toTopOf="0"/>
        <com.badgeduplicator.badgeduplicator3.CircleProgress android:id="@+id/circle_progress" android:layout_width="match_parent" android:layout_height="0dp" android:layout_marginLeft="40dp" android:layout_marginRight="40dp" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintTop_toBottomOf="@+id/logo" style="@style/CircleProgress"/>
        <TextView android:gravity="center" android:id="@+id/txt_value" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="70dp" android:text="@string/reader_presenter_badge" android:textAlignment="center" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintTop_toBottomOf="@+id/logo" style="@style/Msg"/>
    </android.support.constraint.ConstraintLayout>
    <TextView android:textSize="18sp" android:textColor="@color/colorBleuClair" android:id="@+id/lien_site" android:padding="20dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/consulter_site" app:layout_constraintRight_toRightOf="0" app:layout_constraintTop_toTopOf="0"/>
</android.support.constraint.ConstraintLayout>
